fix overlapping again

--- a/frontend/src/pages/courses/learn-more/Course.css
+++ b/frontend/src/pages/courses/learn-more/Course.css
@@ -157,7 +157,7 @@
     .course-content-teachers-wrapper {
         grid-template-columns: 1fr;
         padding: 0;
-        margin-bottom: 2rem;
+        margin-bottom: 3rem;
     }
     .course-content-container-learn-more {
         padding: 0rem;
